# deep-learning-pw

./: .gitignore  LICENSE  README.md  eval_video.ipynb  image_metadata_local_paths.csv  main.ipynb  main2.ipynb  mobilenetv3_train_history.pkl  mobilenetv4_train_history.pkl  optuna_mnv3.db  optuna_mnv4.db  pyproject.toml  test.ipynb  test.py
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.ipynb  main2-checkpoint.ipynb
