[project]
name = "deep-learning-pw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers[torch]>=4.57.3",
]
